removed absolute position from social css class to stop dom collisions on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@ ul {
   margin: 0;
 }
 .social {
-  position: absolute;
+  margin-top: 150px;
   bottom: 14px;
   left: 0;
   right: 0;
